--- a/notebooks/photometry/01.01.03-Background-estimation-FEDER.ipynb
+++ b/notebooks/photometry/01.01.03-Background-estimation-FEDER.ipynb
@@ -150,9 +150,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now that the data are properly masked, we can calculate some basic statistical values to do a scalar estimation of the image background. \n",
-    "\n",
-    "By \"scalar estimation\", we mean the calculation of a single value (such as the mean or median) to represent the value of the background for our entire two-dimensional dataset. This is in contrast to a two-dimensional background, where the estimated background is represented as an array of values that can vary spatially with the dataset. We will calculate a 2D background in the upcoming section.\n",
+    "Now that the data are properly masked, we can calculate some basic statistical values to do a scalar estimation of the image background, as we did in the previous section.\n",
     "\n",
     "### Calculate scalar background value\n",
     "\n",
@@ -231,7 +229,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "But what difference does this sigma clipping make? And how important is masking, anyway? Let's visualize these statistics to get an idea:"
+    "What difference do sigma clipping and masking make in this case? "
    ]
   },
   {
@@ -270,7 +268,7 @@
     "\n",
     "\n",
     "ax2.set_xlim(160, 170)  # flux_range)\n",
-    "ax2.set_xlabel(r'Flux Count Rate ({})'.format(ccd_image.unit.to_string('latex')), fontsize=14)\n",
+    "ax2.set_xlabel(r'Counts ({})'.format(ccd_image.unit.to_string('latex')), fontsize=14)\n",
     "ax2.set_title('Median pixel value', fontsize=16)\n",
     "\n",
     "# Add legend\n",
@@ -281,7 +279,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The contrast with the previous section that used XDF image is striking. In this case msakng makes no difference because there were no non-data areas to mask. Signma clipping makes a much larger difference than in the XDF case because of the presence of a number of relatively bright stars in this image.\n",
+    "The contrast with the previous section that used XDF image is striking. In this case maskng makes no difference because there were no non-data areas to mask. Sigma clipping makes a much larger difference than in the XDF case because of the presence of a number of relatively bright stars in this image.\n",
     "\n",
     "Once sigma clipping has been done it makes little difference whether sources are also masked. \n",
     "\n",
@@ -343,7 +341,7 @@
    "source": [
     "The result here may look surprising at first: background subtraction seems to have made everything much fainter. That is an artifact of using the same image normalization for both images even though the range of their data values is now very different.\n",
     "\n",
-    "In the image on the left the average data value is roughly `165 adu`. In the image on the right the average value is roughly `0 adu` by design, since we subtracted the mean of the first image from every pixel.\n",
+    "In the image on the left, the average data value is roughly `165 adu`. In the image on the right, the average value is roughly `0 adu` by design, since we subtracted the mean of the first image from every pixel.\n",
     "\n",
     "If we redo the plot but use a different image normalization for each it becomes clearer that the scalar background subtraction has one effect: moving the mean pixel value in the image."
    ]
@@ -387,14 +385,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The `Background2D` class allows users to model 2-dimensional backgrounds, by calculating the mean or median in small boxes, and smoothing these boxes to reconstruct a continuous 2D background. The class includes the following arguments/attributes:\n",
-    "* **`box_size`** &mdash; the size of the boxes used to calculate the background. This should be larger than individual sources, yet still small enough to encompass changes in the background.\n",
-    "* **`filter_size`** &mdash; the size of the median filter used to smooth the final 2D background. The dimension should be odd along both axes.\n",
-    "* **`filter_threshold`** &mdash; threshold below which the smoothing median filter will not be applied.\n",
-    "* **`sigma_clip`** &mdash; an ` astropy.stats.SigmaClip` object that is used to specify the sigma and number of iterations used to sigma-clip the data before background calculations are performed.\n",
-    "* **`bkg_estimator`** &mdash; the method used to perform the background calculation in each box (mean, median, SExtractor algorithm, etc.).\n",
+    "The [`Background2D`](https://photutils.readthedocs.io/en/stable/api/photutils.background.Background2D.html#photutils.background.Background2D) class in [`photutils`](https://photutils.readthedocs.io/en/stable/index.html) allows users to model 2-dimensional backgrounds, by calculating the mean or median in small boxes, and smoothing these boxes to reconstruct a continuous 2D background. As in the previous notebook, we will use the [`MeanBackground`](https://photutils.readthedocs.io/en/stable/api/photutils.background.MeanBackground.html#photutils.background.MeanBackground) estimator. \n",
     "\n",
-    "For this example, we will use the `MeanBackground` estimator."
+    "Here we expect that the background image will be useful since there is clearly a gradient in the image."
    ]
   },
   {
@@ -442,6 +435,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "As expected, the gradient is clearly visible in the background. Next, we subtract that two-dimensional background and look at the result."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -485,7 +485,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Note how much more even the 2D background-subtracted image looks; especially the difference between these two images in the bottom left and top right corners. This makes sense, as the background that `Background2D` identified was a gradient from the bottom left corner to the top right corner."
+    "Note how much more even the 2D background-subtracted image looks; the difference between these two images is especially apparent in the bottom left and top right corners. This makes sense, as the background that [`Background2D`](https://photutils.readthedocs.io/en/stable/api/photutils.background.Background2D.html#photutils.background.Background2D) identified was a gradient from the bottom left corner to the top right corner."
    ]
   }
  ],
@@ -505,7 +505,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.7"
+   "version": "3.11.8"
   }
  },
  "nbformat": 4,
