--- a/notebooks/photometry/01.02.01-IRAF-like-simulated-image.ipynb
+++ b/notebooks/photometry/01.02.01-IRAF-like-simulated-image.ipynb
@@ -77,7 +77,7 @@
     "data = make_100gaussians_image()\n",
     "norm = ImageNormalize(stretch=SqrtStretch())\n",
     "plt.figure(figsize=(10, 5))\n",
-    "plt.imshow(data, cmap='Greys', origin='lower', norm=norm,\n",
+    "plt.imshow(data, cmap='Greys_r', origin='lower', norm=norm,\n",
     "           interpolation='nearest')\n",
     "plt.grid()"
    ]
@@ -159,7 +159,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "A plot showing the location of all of the detected sources helps illustrate why some of sources were missed, To display where sources were detected, we create a a set of photutils circular apertures and use its plot method to add a circle over each detected source."
+    "A plot showing the location of all of the detected sources helps illustrate why some of sources were missed. To display where sources were detected, we create a a set of [`photutils`](https://photutils.readthedocs.io/en/stable/) circular apertures and use its plot method to add a circle over each detected source."
    ]
   },
   {
@@ -238,7 +238,14 @@
     "\n",
     "+ the shape of the marker matches the minor-to-major axis ratio\n",
     "+ the major axis of the marker is the FWHM of the major axis\n",
-    "+ the thickness of the merker edge indicates the amplitude of the source.\n"
+    "+ the thickness of the marker edge indicates the amplitude of the source.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Next, we overlay the sources that were detected."
    ]
   },
   {
@@ -322,18 +329,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "### An exploration of some parameters of [`DAOStarFinder`](https://photutils.readthedocs.io/en/stable/api/photutils.detection.DAOStarFinder.html#photutils.detection.DAOStarFinder) \n",
     "\n",
-    "We can test some of the assertions in the previous paragraph. As a couple of example of that, we can try to\n",
+    "We can test some of the assertions in the previous paragraph. A couple of examples of that are to try\n",
     "\n",
-    "1. A lowe4r threshold in detection to try to detect the fainter sources in this test image. Below we will try a threshold of 3 times the standard deviation of the background instead of 5 times.\n",
+    "1. A lower threshold in detection to try to detect the fainter sources in this test image. Below we will try a threshold of 3 times the standard deviation of the background instead of 5 times.\n",
     "2. A ratio smaller than 1 to detect the more elongated sources. The ratio argument is the ratio of the semiminor to semimajor axis. Below we will try a ratio of 0.33.\n",
     "\n",
     "The code below begins with a function to do the plotting for this so that we can reuse that code for each plot."
@@ -385,7 +385,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The plot on the left shows that lowering the detetion threshold does find more sources, but it also includes erroneous detections. The plot on right demonstrates that we can detect some (but not all) of the highly elongated objects by changing the `ratio` parameter in [`DAOStarFinder`](https://photutils.readthedocs.io/en/stable/api/photutils.detection.DAOStarFinder.html#photutils.detection.DAOStarFinder)."
+    "The plot on the left shows that lowering the detetion threshold does find more sources, but it also includes erroneous detections. The plot on right demonstrates that we can detect some (but not all) of the highly elongated objects by changing the `ratio` parameter in [`DAOStarFinder`](https://photutils.readthedocs.io/en/stable/api/photutils.detection.DAOStarFinder.html#photutils.detection.DAOStarFinder). The reason that we don't pick up more of the elongated sources is that the orientation of the source matters too. The default value for the orientation is zero, i.e. aligned with the horizontal axis."
    ]
   },
   {
@@ -394,7 +394,7 @@
    "source": [
     "## Summary\n",
     "\n",
-    "The takeway from this section should be that the IRAF-like methods implemented in photutils are good at finding star-like sources. As we will see in the next couple of sections, the methods work very well for detecting stars or galaxiues that are small enough to look like stars. After that we will look at a couple of methods, local peak detection and image segmentation, that are better for detecting extended sources."
+    "The takeway from this section should be that the IRAF-like methods implemented in photutils are good at finding star-like sources. As we will see in the next couple of sections, the methods work very well for detecting stars or galaxies that are small enough to look like stars. After that we will look at a couple of methods, local peak detection and image segmentation, that are better for detecting extended sources."
    ]
   }
  ],
@@ -414,7 +414,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.3"
+   "version": "3.11.8"
   }
  },
  "nbformat": 4,
