--- a/notebooks/photometry/01.02.03-Source-detection-FEDER.ipynb
+++ b/notebooks/photometry/01.02.03-Source-detection-FEDER.ipynb
@@ -15,7 +15,7 @@
     "\n",
     "The image in this notebook is of the field of the star [TIC 125489084](https://exofop.ipac.caltech.edu/tess/target.php?id=125489084) on a night when the moon was nearly full. The moonlight caused a smooth gradient across the background of the image.\n",
     "\n",
-    "As discussed in NOTEBOOK ABOUT BACKGROUND SUBTRACTION, the best way to remove the background in this case is to use photutils to construct a 2D model of the background. \n",
+    "As discussed in the section about [background subtraction with this image](01.01.03-Background-estimation-FEDER.ipynb), the best way to remove the background in this case is to use photutils to construct a 2D model of the background. \n",
     "\n",
     "As we will see in a moment, [`DAOStarFinder`](https://photutils.readthedocs.io/en/stable/api/photutils.detection.DAOStarFinder.html#photutils.detection.DAOStarFinder) does a good job identifying most of the sources in the image, since all of the sources are stars."
    ]
@@ -102,7 +102,7 @@
    "source": [
     "## Perform 2-D background estimation and subtraction\n",
     "\n",
-    "For more discussion of the choices here, see XXXXX. The next couple of cells calculate the background and subtract it, and then display the background-subtracted data."
+    "For more discussion of the choices here, see [background subtraction with this image](01.01.03-Background-estimation-FEDER.ipynb). The next couple of cells calculate the background and subtract it, and then display the background-subtracted data."
    ]
   },
   {
@@ -152,7 +152,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Note how much more even the 2D background-subtracted image looks; especially the difference between these two images in the bottom left and top right corners. This makes sense, as the background that `Background2D` identified was a gradient from the bottom left corner to the top right corner."
+    "Note that after subtraction the background of the image looks fairly uniform."
    ]
   },
   {
@@ -161,7 +161,7 @@
    "source": [
     "## Source detection\n",
     "\n",
-    "We will use the [`DAOStarFinder`](https://photutils.readthedocs.io/en/stable/api/photutils.detection.DAOStarFinder.html#photutils.detection.DAOStarFinder) to detect the sources in this image. The typical FWHM of the stars in the image is about 6.2 pixels. For the detection threshold, we will use 5 times the standard deviation of the sigma-clipped image.\n",
+    "We will use the [`DAOStarFinder`](https://photutils.readthedocs.io/en/stable/api/photutils.detection.DAOStarFinder.html#photutils.detection.DAOStarFinder) to detect the sources in this image. The typical full width half maximum (FWHM) of the stars in the image is about 6.2 pixels. For the detection threshold, we will use 5 times the standard deviation of the sigma-clipped image.\n",
     "\n",
     "In addition, we'll mask out the area within 50 pixels of the edge of the image, where the stars are often elongated on this camera."
    ]
@@ -240,7 +240,7 @@
    "source": [
     "You might at first be tempted to lower the threshold for detection. It turns out that that will report many more detections, but many of them will not actually be stars. A more effective approach is to increase the FWHM used by [`DAOStarFinder`](https://photutils.readthedocs.io/en/stable/api/photutils.detection.DAOStarFinder.html#photutils.detection.DAOStarFinder) instead, to something like 1.5 or 2 × the FWHM of the stars in the image.\n",
     "\n",
-    "A comparison of these three approaches is below."
+    "Below is a comparison of these two approaches with the source detection we did above."
    ]
   },
   {
