--- a/notebooks/photometry/01.03.01-peak_detection-simulated-image.ipynb
+++ b/notebooks/photometry/01.03.01-peak_detection-simulated-image.ipynb
@@ -66,62 +66,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import warnings\n",
-    "\n",
-    "from astropy.nddata import CCDData\n",
-    "from astropy.stats import sigma_clipped_stats, SigmaClip\n",
-    "import astropy.units as u\n",
-    "from astropy.visualization import ImageNormalize, LogStretch\n",
-    "\n",
-    "import matplotlib.pyplot as plt\n",
-    "from matplotlib.ticker import LogLocator\n",
-    "\n",
-    "import numpy as np\n",
-    "\n",
-    "from photutils.background import Background2D, MeanBackground\n",
-    "from photutils.centroids import centroid_2dg\n",
-    "from photutils.detection import find_peaks, DAOStarFinder, IRAFStarFinder\n",
-    "\n",
-    "# Show plots in the notebook\n",
-    "%matplotlib inline"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "xdf_image = CCDData.read('hlsp_xdf_hst_acswfc-60mas_hudf_f435w_v1_sci.fits')\n",
-    "# Define the mask\n",
-    "mask = xdf_image.data == 0\n",
-    "xdf_image.mask = mask"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "mean, median, std = sigma_clipped_stats(xdf_image.data, sigma=3.0, maxiters=5, mask=xdf_image.mask)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.style.use('../photutils_notebook_style.mplstyle')"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -206,7 +150,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "And just for fun, let's plot these matching sources. (The colors chosen to represent different sets are from [Paul Tol's guide for accessible color schemes](https://personal.sron.nl/~pault/).)"
+    "Let's plot both sets of sources on the original image."
    ]
   },
   {
@@ -239,14 +183,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "*Remember that you can double-click on the plot to zoom in and look around!*"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "That peak findging works better on this image that DAOfind shouldn't be surprising because many of the sources are not round. As we discussed in the section [XX BROKEN LINK SIMU DAO XX](), the star-finding techniques are not a good match for an image like this with many extended sources."
+    "That peak findging works better on this image that DAOfind shouldn't be surprising because many of the sources are not round. As we discussed in the section on [source detection in a simulated image](01.02.01-IRAF-like-simulated-image.ipynb), the star-finding techniques are not a good match for an image like this with many extended sources."
    ]
   },
   {
@@ -255,7 +192,7 @@
    "source": [
     "## Summary\n",
     "\n",
-    "The sources found by [`find_peaks`](https://photutils.readthedocs.io/en/stable/api/photutils.detection.find_peaks.html#photutils.detection.find_peaks) are roughly the same as those found by the star-finding algorithms. In [XX BROKEN LINK SEGMENTATION]() we will look at a much different approach that is especially well suited to finding extended objects."
+    "There are several more sources found by [`find_peaks`](https://photutils.readthedocs.io/en/stable/api/photutils.detection.find_peaks.html#photutils.detection.find_peaks) than are found found by the star-finding algorithms, but several are still being missed. In the section on [image segmentation with a simulated image](01.04.01-image-segmentation-simulated-image.ipynb) we will look at a much different approach that is especially well suited to finding extended objects."
    ]
   }
  ],
