--- a/notebooks/photometry/01.03.03-peak_detection-Feder.ipynb
+++ b/notebooks/photometry/01.03.03-peak_detection-Feder.ipynb
@@ -11,11 +11,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Data are used in this notebook?\n",
+    "## Data used in this notebook\n",
     "\n",
     "The image in this notebook is of the field of the star [TIC 125489084](https://exofop.ipac.caltech.edu/tess/target.php?id=125489084) on a night when the moon was nearly full. The moonlight caused a smooth gradient across the background of the image.\n",
     "\n",
-    "As discussed in NOTEBOOK ABOUT BACKGROUND SUBTRACTION, the best way to remove the background in this case is to use photutils to construct a 2D model of the background. \n",
+    "As discussed in the section about [background subtraction with this image](01.01.03-Background-estimation-FEDER.ipynb), the best way to remove the background in this case is to use photutils to construct a 2D model of the background. \n",
+    "\n",
     "\n",
     "As we will see in a moment, [`DAOStarFinder`](https://photutils.readthedocs.io/en/stable/api/photutils.detection.DAOStarFinder.html#photutils.detection.DAOStarFinder) does a good job identifying most of the sources in the image, since all of the sources are stars."
    ]
@@ -50,7 +51,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "To begin, let's create the image and subtract the background. Recall that this image contains a mix of star-like object and more extended sources."
+    "To begin, let's create the image and subtract the background. Recall that this image contains only stars."
    ]
   },
   {
@@ -91,15 +92,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "For more general source detection cases that do not require comparison with models, `photutils` offers the [`find_peaks`](https://photutils.readthedocs.io/en/stable/api/photutils.detection.find_peaks.html#photutils.detection.find_peaks) function. \n",
+    "As in the previous two peak finding examples, we include a centroid function so that we can compare the sources detected by peak finding with the sources identified by the star-finding algorithms.\n",
     "\n",
-    "This function simply finds sources by identifying local maxima above a given threshold and separated by a given distance, rather than trying to fit data to a given model. Unlike the previous detection algorithms, [`find_peaks`](https://photutils.readthedocs.io/en/stable/api/photutils.detection.find_peaks.html#photutils.detection.find_peaks) does not necessarily calculate objects' centroids. Unless the `centroid_func` argument is passed a function like `photutils.centroids.centroid_2dg` that can handle source position centroiding, `find_peaks` will return just the integer value of the peak pixel for each source.\n",
-    "\n",
-    "This algorithm is particularly useful for identifying non-stellar sources or heavily distorted sources in image data.\n",
-    "\n",
-    "The centroid-finding, which we do here only so that we can compare positions found by this method to positions found by the star-finding methods, can generate many warnings when an attempt is made to fit a 2D Gaussian to the sources. The warnings are suppressed below to avoid cluttering the output.\n",
-    "\n",
-    "Let's see how it does:"
+    "The centroid-finding, which we do here only so that we can compare positions found by this method to positions found by the star-finding methods, can generate many warnings when an attempt is made to fit a 2D Gaussian to the sources. The warnings are suppressed below to avoid cluttering the output."
    ]
   },
   {
@@ -116,6 +111,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The roughly 550 sources identified by [`find_peaks`](https://photutils.readthedocs.io/en/stable/api/photutils.detection.find_peaks.html#photutils.detection.find_peaks) is much larger than the number detected by the [star-finding approach](01.02.03-Source-detection-FEDER.ipynb).\n",
+    "\n",
+    "Let's take a look at the detections on the image to see what is going on."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -127,7 +131,7 @@
     "# Plot the 2D-subtracted data\n",
     "norm = ImageNormalize(ccd_2d_bkgdsub, interval=AsymmetricPercentileInterval(30, 99.5))\n",
     "\n",
-    "fitsplot = ax1.imshow(data_subtracted, cmap='Greys', origin='lower', norm=norm,\n",
+    "fitsplot = ax1.imshow(data_subtracted, cmap='viridis', origin='lower', norm=norm,\n",
     "           interpolation='nearest')\n",
     "ax1.scatter(sources_findpeaks['x_peak'], sources_findpeaks['y_peak'], s=30, marker='o',\n",
     "            lw=1, alpha=0.7, facecolor='None', edgecolor='r')\n",
@@ -145,7 +149,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The column on the left side of this CCD is not actually exposed to light, so [`find_peaks`](https://photutils.readthedocs.io/en/stable/api/photutils.detection.find_peaks.html#photutils.detection.find_peaks) finds a bunch of spurious sources. Recall that we can provide a mask to the source finder. As we did in [XX BROKEN LINK FEDER DAO](), we exclude the region within 50 pixels of the edge."
+    "The column on the left side of this CCD is not actually exposed to light, so [`find_peaks`](https://photutils.readthedocs.io/en/stable/api/photutils.detection.find_peaks.html#photutils.detection.find_peaks) finds a bunch of spurious sources. Recall that we can provide a mask to the source finder. As we did in the [star-finding approach](01.02.03-Source-detection-FEDER.ipynb), we exclude the region within 50 pixels of the edge."
    ]
   },
   {
@@ -178,12 +182,19 @@
     "# Plot the 2D-subtracted data\n",
     "norm = ImageNormalize(ccd_2d_bkgdsub, interval=AsymmetricPercentileInterval(30, 99.5))\n",
     "\n",
-    "fitsplot = ax1.imshow(data_subtracted, cmap='Greys', origin='lower', norm=norm,\n",
+    "fitsplot = ax1.imshow(data_subtracted, cmap='viridis', origin='lower', norm=norm,\n",
     "           interpolation='nearest')\n",
     "ax1.scatter(sources_findpeaks['x_peak'], sources_findpeaks['y_peak'], s=30, marker='o',\n",
     "            lw=1, alpha=0.7, facecolor='None', edgecolor='r')\n",
     "\n",
     "ax1.set_title(\"find_peaks, image edges masked\");"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This looks quite a bit more reasonable."
    ]
   },
   {
@@ -221,7 +232,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "And just for fun, let's plot these matching sources. (The colors chosen to represent different sets are from [Paul Tol's guide for accessible color schemes](https://personal.sron.nl/~pault/).)"
+    "In this example, many more sources are detected by [`DAOStarFinder`](https://photutils.readthedocs.io/en/stable/api/photutils.detection.DAOStarFinder.html#photutils.detection.DAOStarFinder) than by [`find_peaks`](https://photutils.readthedocs.io/en/stable/api/photutils.detection.find_peaks.html#photutils.detection.find_peaks). A plot showing both detection methods illustrates that the star-finding approach is doing a better job here."
    ]
   },
   {
@@ -254,13 +265,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "*Remember that you can double-click on the plot to zoom in and look around!*"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "## Summary\n",
     "\n",
     "In this case, [`DAOStarFinder`](https://photutils.readthedocs.io/en/stable/api/photutils.detection.DAOStarFinder.html#photutils.detection.DAOStarFinder) performs better than [`find_peaks`](https://photutils.readthedocs.io/en/stable/api/photutils.detection.find_peaks.html#photutils.detection.find_peaks). This makes sense, since [`DAOStarFinder`](https://photutils.readthedocs.io/en/stable/api/photutils.detection.DAOStarFinder.html#photutils.detection.DAOStarFinder) is tuned for finding stars, and all of the sources in this image are stars."
@@ -283,7 +287,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.3"
+   "version": "3.11.8"
   }
  },
  "nbformat": 4,
