--- a/notebooks/photometry/00.00-Preface.ipynb
+++ b/notebooks/photometry/00.00-Preface.ipynb
@@ -22,19 +22,12 @@
     "```{note}\n",
     "Several notebooks in this part of the guide were origninally developed by Lauren CHambers and Erik Tollerud with support from the Community Software Initiative at the Space Telescope Science Institute, the Astropy Project and ScienceBetter Consulting. Those notebooks are:\n",
     "\n",
-    "+ A notebook\n",
-    "+ Another notebook \n",
+    "+ [Handling masking before background removal](01.01.02-Background-estimation-XDF.ipynb)\n",
+    "+ [Detecting sources in the XDF](01.02.02-IRAF-like-source-detection-XDF.ipynb) Another notebook \n",
     "\n",
-    "<img style=\"float: right;\" src=\"https://raw.githubusercontent.com/spacetelescope/notebooks/master/assets/stsci_pri_combo_mark_horizonal_white_bkgd.png\" alt=\"STScI logo\" width=\"200px\"/>\n",
+    "<img style=\"float: left;\" src=\"https://raw.githubusercontent.com/spacetelescope/notebooks/master/assets/stsci_pri_combo_mark_horizonal_white_bkgd.png\" alt=\"STScI logo\" width=\"200px\"/>\n",
     "```"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -53,7 +46,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.3"
+   "version": "3.11.8"
   }
  },
  "nbformat": 4,
