--- a/notebooks/photometry/01.00-Source-detection.ipynb
+++ b/notebooks/photometry/01.00-Source-detection.ipynb
@@ -15,7 +15,7 @@
     "\n",
     "+ Find sources in your image and perform photometry on every source you can detect in the image.\n",
     "+ Perform photometry on objects from a catalog (either one you have created or from some other source); this presumes there is WCS information in the images so that catalog RA/Dec can be translated to pixel position on the image.\n",
-    "+ Stack your images, detect the sources in that much deeper stacked image, treat those sources as your catalog and use that catlog to erform photometry."
+    "+ Stack your images, detect the sources in that much deeper stacked image, treat those sources as your catalog and use that catlog to perform photometry."
    ]
   },
   {
@@ -46,7 +46,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.11.8"
   }
  },
  "nbformat": 4,
