--- a/notebooks/photometry/01.03-Local-peak-detection.ipynb
+++ b/notebooks/photometry/01.03-Local-peak-detection.ipynb
@@ -4,15 +4,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Local peak detection"
+    "# Local peak detection\n",
+    "\n",
+    "Peak detection finds sources by identifying local maxima above a given threshold and separated by a given distance, rather than trying to fit data to a given model like a Gaussian. It can be particularly useful for identifying non-stellar sources or heavily distorted sources in image data."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -31,7 +26,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.3"
+   "version": "3.11.8"
   }
  },
  "nbformat": 4,
